k8s/infrastructure/traefik/middleware.yml
# Common Traefik middlewares for the cluster
# These middlewares can be applied to Ingress resources via annotation:
#   traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
---
# HTTPS redirect middleware
# Redirects all HTTP traffic to HTTPS
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
